<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/userNumber"
        android:background="#C0C0C0"
        android:hint="Enter Phone Number"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </EditText>


    <EditText
        android:id="@+id/userPassword"
        android:textColorHint="@color/black"
        android:background="#C0C0C0"
        android:hint="Enter Password"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </EditText>


    <androidx.cardview.widget.CardView
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="50dp">


        <TextView
            android:id="@+id/loginButton"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="Login Please"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>